crates/ink/tests/ui/contract/fail/trait-message-wildcard-selector.stderr
error: encountered conflicting ink! attribute argument
 --> tests/ui/contract/fail/trait-message-wildcard-selector.rs:4:24
  |
4 |         #[ink(message, selector = _)]
  |                        ^^^^^^^^^^^^

error: wildcard selectors are only supported for inherent ink! messages or constructors, not for traits.
 --> tests/ui/contract/fail/trait-message-wildcard-selector.rs:4:24
  |
4 |         #[ink(message, selector = _)]
  |                        ^^^^^^^^^^^^

error[E0432]: unresolved import `super::foo::TraitDefinition`
  --> tests/ui/contract/fail/trait-message-wildcard-selector.rs:11:9
   |
11 |     use super::foo::TraitDefinition;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `TraitDefinition` in `foo`
